Sign button interactions

--- a/src/templates/pages/petition.twig
+++ b/src/templates/pages/petition.twig
@@ -14,5 +14,5 @@
   {% include 'components/sign-form-modal' %}
   {% include 'components/share-modal' %}
 
-  <button class="sign-form__modal-toggle" data-modal="sign-form-modal">Sign Now</button>
+  <button class="sign-form__modal-toggle">Sign Now</button>
 {% endblock %}
