--- a/src/styles/components/_sign-form.scss
+++ b/src/styles/components/_sign-form.scss
@@ -34,6 +34,7 @@
   }
 
   &__modal-toggle {
+    display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
@@ -47,7 +48,6 @@
     text-transform: uppercase;
     @include font(roboto-condensed-bold);
     @include respond((
-      display: flex null none,
       font-size: 21px,
     ));
   }
