Mobile home illustration styles

--- a/src/styles/components/_home-illustration.scss
+++ b/src/styles/components/_home-illustration.scss
@@ -23,8 +23,8 @@
 
   &__top {
     @include respond((
-      background-color: $off-white null $black,
-      padding-top: null null 60px,
+      background-color: $black,
+      padding-top: 30px null 60px,
     ));
 
     .home-illustration__content {
@@ -54,12 +54,12 @@
   &__heading {
     text-align: center;
     text-transform: uppercase;
+    display: table;
     @include respond((
-      display: none null table,
       font-size: 36px,
       line-height: 42px,
       margin: auto,
-      background-color: null null $azure,
+      background-color: $azure,
       padding: null null (0px 8px),
     ));
 
@@ -73,27 +73,8 @@
   &__content {
     @include respond((
       width: null null percentage(380px/$bp-xl),
-      padding: (40px percentage(30/320) 60px) null (80px 0 100px 0),
+      padding: (40px percentage(15/320) 60px) null (80px 0 100px 0),
     ));
-  }
-
-
-  &__image {
-    position: relative;
-    @include respond((
-      display: block null none,
-    ));
-
-    img {
-      width: 100%;
-    }
-
-    & + .home-illustration__content-heading {
-      @include respond((
-        margin-top: 25px,
-      ));
-    }
-
   }
 
 
@@ -101,9 +82,9 @@
     @include font(roboto-condensed-bold);
     text-transform: uppercase;
     @include respond((
-      color: $black null $white,
-      font-size: 22px null 48px,
-      line-height: 30px null .9,
+      color: $white,
+      font-size: 36px null 48px,
+      line-height: .9,
     ));
   }
 
@@ -111,8 +92,8 @@
   &__body {
     @include font(roboto);
     @include respond((
-      color: $azure null $white,
-      margin-top: 12px null 40px,
+      color: $white,
+      margin-top: 20px null 40px,
       font-size: 14px,
       line-height: 20px,
     ));
@@ -122,16 +103,15 @@
   &__cta {
     display: flex;
     white-space: nowrap;
-    @include font(roboto-medium);
+    @include font(roboto-condensed-bold);
     @include respond((
-      justify-content: center null flex-start,
-      text-transform: null null uppercase,
-      color: $azure null $white,
-      width: 225px null auto,
-      height: 50px null 30px,
-      border: (2px solid $azure) null 0,
-      font-size: 12px null 20px,
-      line-height: 20px null 30px,
+      justify-content: flex-start,
+      text-transform: uppercase,
+      color: $white,
+      width: auto,
+      height: 30px,
+      font-size: 20px,
+      line-height: 30px,
     ));
 
     &:first-of-type {
@@ -142,8 +122,6 @@
 
     &:nth-of-type(2) {
       @include respond((
-        background-color: $azure null transparent,
-        color: $white,
         margin-top: 10px null 24px,
       ));
     }
@@ -152,7 +130,7 @@
       fill: $white;
       margin-left: 15px;
       @include respond((
-        display: none null inline-block,
+        display: inline-block,
         width: 7.4px,
         height: 12px,
       ));
