--- a/src/templates/components/home-illustration.twig
+++ b/src/templates/components/home-illustration.twig
@@ -28,27 +28,16 @@
       <h3 class="home-illustration__content-heading">
         Focusing On Big Issues
       </h3>
-      <p class="home-illustration__body">
-        Our values manifest themselves in the issues we target. Here are just a few of our focus areas:
-      </p>
-      <ul class="home-illustration__list">
-        <li class="home-illustration__list-item">
-          <img src="/images/icons/illustration-checkbox.svg" alt="">
-          <div class="home-illustration__list-item__text">2018 Elections</div>
-        </li>
-        <li class="home-illustration__list-item">
-          <img src="/images/icons/illustration-coins.svg" alt="">
-          <div class="home-illustration__list-item__text">Tax Reform</div>
-        </li>
-        <li class="home-illustration__list-item">
-          <img src="/images/icons/illustration-flag.svg" alt="">
-          <div class="home-illustration__list-item__text">Immigration</div>
-        </li>
-        <li class="home-illustration__list-item">
-          <img src="/images/icons/illustration-cross.svg" alt="">
-          <div class="home-illustration__list-item__text">Healthcare</div>
-        </li>
-      </ul>
+      <div class="home-illustration__body">
+        <p>Our values manifest themselves in the issues we target. Here are just a few of our focus areas:</p>
+        <br>
+        <p>
+          2018 Elections <br>
+          Tax Reform <br>
+          Immigration <br>
+          Healthcare <br>
+        </p>
+      </div>
     </div>
   </div>
 
