--- a/src/templates/components/cta-grid.twig
+++ b/src/templates/components/cta-grid.twig
@@ -5,21 +5,17 @@
       SHOWING UP
     </h2>
     <h3 class="cta-grid__subheading">
-      Looking to get involved, but unsure where to start? <br>
-      We’re here to help you take the first step.
+      Looking to get involved, but unsure where to start? We’re here to help you take the first step.
     </h3>
 
     <div class="cta-grid__grid">
       <a href="#" class="cta-grid__item">
-        <img src="/images/icons/cta-document.svg" alt="" class="cta-grid__image">
         <p class="cta-grid__text"><span>Sign a Petition</span></p>
       </a>
       <a href="#" class="cta-grid__item">
-        <img src="/images/icons/cta-hand.svg" alt="" class="cta-grid__image">
         <p class="cta-grid__text"><span>Support a Campaign</span></p>
       </a>
       <a href="#" class="cta-grid__item">
-        <img src="/images/icons/cta-banner.svg" alt="" class="cta-grid__image">
         <p class="cta-grid__text"><span>Attend an Event</span></p>
       </a>
     </div>
