Home CTA Grid subheading

--- a/src/styles/components/_cta-grid.scss
+++ b/src/styles/components/_cta-grid.scss
@@ -24,6 +24,9 @@
   }
 
   &__subheading {
+    max-width: 560px;
+    margin-left: auto;
+    margin-right: auto;
     @include font(roboto);
     @include respond((
       font-size: 14px null 24px,
