--- a/src/templates/components/testimonial.twig
+++ b/src/templates/components/testimonial.twig
@@ -10,6 +10,7 @@
           “When a community starts to listen to each other, pull together, and work towards a common goal, the anything is possible.”
         </div>
         <div class="testimonial__source">— <strong>Chuck</strong>, MoveOn Mobilizer</div>
+        <span class="clearfix"></span>
       </div>
 
   </div>
