--- a/src/templates/layout.twig
+++ b/src/templates/layout.twig
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>{% block title %}Move On{% endblock %}</title>
         <link rel="stylesheet" href="/styles/vendors.css" />
         <link rel="stylesheet" href="/styles/main.css" />
