--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,6 +28,7 @@
 @import 'components/signers';
 @import 'components/signers-modal';
 @import 'components/share-modal';
+@import 'components/price-select';
 
 // PER PAGE COMPONENTS
 @import "components/home-hero";
