--- a/src/styles/settings/_colors.scss
+++ b/src/styles/settings/_colors.scss
@@ -5,6 +5,7 @@ $light-gray: #a7a7a7;
 $slate-gray: #696a6a;
 $dark-gray: #222222;
 $black: #000000;
+$cerulean: #0080bf;
 $azure: #00abff;
 $light-blue: #99ddff;
 $ice-blue: #e5f5ff;
