--- a/src/templates/components/donate-confirm.twig
+++ b/src/templates/components/donate-confirm.twig
@@ -35,33 +35,8 @@
     <div class="donate-next">
       <div class="donate-next__heading">Take the Next Step</div>
       <div class="donate-next__subheading">Help keep us going with a recurring monthly contribution.</div>
-      <form class="donate-next__form donate-form__fields">
+      <form class="donate-next__form donate-form__fields donate-shortform">
         {% include 'components/price-select' %}
-        {# <div class="radio-input">
-          <input type="radio" name="amount" id="amount-$25" value="$25">
-            <label for="amount-$25">$25</label>
-        </div>
-        <div class="radio-input">
-          <input type="radio" name="amount" id="amount-$50" value="$50">
-          <label for="amount-$50">$50</label>
-        </div>
-        <div class="radio-input">
-          <input type="radio" name="amount" id="amount-$100" value="$100">
-          <label for="amount-$100">$100</label>
-        </div>
-        <div class="radio-input">
-          <input type="radio" name="amount" id="amount-$200" value="$200">
-          <label for="amount-$200">$200</label>
-        </div>
-        <div class="radio-input">
-          <input type="radio" name="amount" id="amount-$400" value="$400">
-          <label for="amount-$400">$400</label>
-        </div>
-        <div class="radio-input">
-          <input type="radio" name="amount" id="amount-other" value="other">
-          <label for="amount-other">Other $</label>
-          <input type="number" name="other-amount" placeholder="Enter your own amount">
-        </div> #}
         <div class="donate-form__actions">
           <button type="submit" class="btn donate-form__action--solid" disabled>Contribute</button>
         </div>
