--- a/src/templates/components/donate-form.twig
+++ b/src/templates/components/donate-form.twig
@@ -1,4 +1,4 @@
-<form action="" class="donate-form">
+<form action="" class="donate-form donate-form-full">
 
   <h1 class="donate-form__heading">DONATE</h1>
   <h2 class="donate-form__subheading">Be a force for change.</h2>
