--- a/src/templates/components/header.twig
+++ b/src/templates/components/header.twig
@@ -15,9 +15,9 @@
           </button>
         </a>
         <ul class="nav__primary__subnav">
-          <li><a href="#">Sublink</a></li>
-          <li><a href="#">Sublink</a></li>
-          <li><a href="#">Sublink</a></li>
+          <li><a href="/petition.html">Sublink</a></li>
+          <li><a href="/petition.html">Sublink</a></li>
+          <li><a href="/petition.html">Sublink</a></li>
         </ul>
       </li>
       <li class="nav__dropdown">
@@ -43,8 +43,8 @@
       </ul>
       <ul class="nav__secondary__bottom">
         <li><a href="#">Join</a></li>
-        <li><a href="#">Donate</a></li>
-        <li><a href="#">{% include 'components/svg' with {id: 'document-add'} %}Start A Petition</a></li>
+        <li><a href="/donate-v2.html">Donate</a></li>
+        <li><a href="/petition.html">{% include 'components/svg' with {id: 'document-add'} %}Start A Petition</a></li>
       </ul>
     </div>
 
