Implement price select group

--- a/src/templates/components/donate-form.twig
+++ b/src/templates/components/donate-form.twig
@@ -13,7 +13,7 @@
         <div class="donate-form__step__subheading">
           How much would you like to donate?
         </div>
-        <div class="donate-form__fields">
+        <div class="donate-form__fields price-select-group">
           <div class="radio-input">
             <input type="radio" name="amount" id="amount-$25" value="$25">
             <label for="amount-$25">$25</label>
