--- a/src/templates/components/price-select.twig
+++ b/src/templates/components/price-select.twig
@@ -1,4 +1,4 @@
-<div class="price-select">
+<div class="price-select price-select-group">
   <div class="price-select__price">
     <input type="radio" name="amount" id="amount-$25" value="$25">
     <label for="amount-$25">$25</label>
@@ -21,6 +21,6 @@
   </div>
   <div class="price-select__custom">
     <label for="amount-other">$</label>
-    <input type="text" name="amount" id="amount-other">
+    <input type="text" name="other-amount" id="amount-other">
   </div>
 </div>
