--- a/src/templates/pages/petition.twig
+++ b/src/templates/pages/petition.twig
@@ -8,7 +8,9 @@
     {% include 'components/petition-details' %}
   </div>
   <div class="petition-sign-column">
-    {% include 'components/sign-form' %}
+    <div class="sticky">
+      {% include 'components/sign-form' %}
+    </div>
   </div>
 
   {% include 'components/sign-form-modal' %}
