--- a/src/styles/components/_sign-form-modal.scss
+++ b/src/styles/components/_sign-form-modal.scss
@@ -27,5 +27,11 @@
     @include respond((
       margin-top: 70px,
     ));
+
+    & input,
+    & textarea,
+    & select {
+      background-color: transparent;
+    }
   }
 }
