--- a/src/templates/components/price-select.twig
+++ b/src/templates/components/price-select.twig
@@ -1,22 +1,22 @@
 <div class="price-select price-select-group">
   <div class="price-select__price">
-    <input type="radio" name="amount" id="amount-$25" value="$25">
+    <input type="radio" name="amount" id="amount-$25" value="$25" required>
     <label for="amount-$25">$25</label>
   </div>
   <div class="price-select__price">
-    <input type="radio" name="amount" id="amount-$50" value="$50">
+    <input type="radio" name="amount" id="amount-$50" value="$50" required>
     <label for="amount-$50">$50</label>
   </div>
   <div class="price-select__price">
-    <input type="radio" name="amount" id="amount-$100" value="$100">
+    <input type="radio" name="amount" id="amount-$100" value="$100" required>
     <label for="amount-$100">$100</label>
   </div>
   <div class="price-select__price">
-    <input type="radio" name="amount" id="amount-$200" value="$200">
+    <input type="radio" name="amount" id="amount-$200" value="$200" required>
     <label for="amount-$200">$200</label>
   </div>
   <div class="price-select__price">
-    <input type="radio" name="amount" id="amount-$400" value="$400">
+    <input type="radio" name="amount" id="amount-$400" value="$400" required>
     <label for="amount-$400">$400</label>
   </div>
   <div class="price-select__custom">
